<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.second.SecondActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationContentDescription="@string/button_back"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/second_screen"
                app:titleCentered="true"
                app:navigationIconTint="#554AF0"
                app:titleTextAppearance="@style/ToolbarTitle" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider" />
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:textSize="12sp"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_text"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:text="@string/john_doe"
        android:layout_marginTop="-5dp"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_selected_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:textColor="@color/dark_text"
        android:text="@string/selected_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="12dp"
        android:layout_margin="30dp"
        android:text="@string/choose_a_user"
        android:fontFamily="@font/poppins"
        android:padding="12dp"
        android:backgroundTint="@color/btn_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>