<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/photo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/ic_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="51dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingEnd="16dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColorHint="#6867775C"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_palindrome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@id/layout_name"
        app:layout_constraintStart_toStartOf="@id/layout_name"
        app:layout_constraintTop_toBottomOf="@id/layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_palindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingEnd="16dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColorHint="#6867775C"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="@font/poppins"
        android:paddingVertical="10dp"
        android:text="@string/check"
        android:textSize="14sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/layout_name"
        app:layout_constraintStart_toStartOf="@id/layout_name"
        app:layout_constraintTop_toBottomOf="@id/layout_palindrome"
        tools:targetApi="lollipop" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="@font/poppins"
        android:paddingVertical="10dp"
        android:text="@string/next"
        android:textSize="14sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/btn_check"
        app:layout_constraintStart_toStartOf="@id/btn_check"
        app:layout_constraintTop_toBottomOf="@id/btn_check"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>